--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "commit": "git-cz",
     "lint": "eslint --max-warnings=0 .",
     "lint:fix": "npm run lint -- --fix",
-    "prepare": "husky",
+    "prepare": "",
     "release": "standard-version",
     "release:mock": "npm run release -- --dry-run",
     "test": "jest --detectOpenHandles --coverage --no-cache",
@@ -56,7 +56,6 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.11",
     "lodash": "^4.17.21",
